@@ -133,7 +133,7 @@ static PyObject* get_init(PyObject* self, PyObject* arg)
 
 static void joy_dealloc(PyObject* self)
 {
-	PyMem_DEL(self);
+	PyObject_DEL(self);
 }
 
 
